--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,6 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+# For Vercel Postgres, use the connection string from your Vercel dashboard
+# Format: postgresql://user:password@host:port/database?sslmode=require
+DATABASE_URL="postgresql://user:password@host:port/database?sslmode=require"
