--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^11.18.2",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
