--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
