--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
+    "localforage": "^1.10.0",
     "next": "15.5.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
