--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
+    "cleanup:expired": "node scripts/cleanup-expired.mjs",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
@@ -18,13 +19,13 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.19.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
-    "next": "15.5.7",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -37,7 +38,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "postcss": "^8.5.3",
-    "prisma": "^6.5.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2"
   },
