--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:health-check": "node scripts/db-health-check.mjs",
     "dev": "next dev -H 0.0.0.0",
     "postinstall": "prisma generate",
     "preview": "next build && next start",
