--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
